--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             </a>
         </div>
         <div class="ending">
-            <p>Thanks for visiting. Updated portfolio will comming soon.</p>
+            <p>Thanks for visiting. Updated portfolio will coming soon.</p>
         </div>
         </div>
     </div>
