Update prefix of cv

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
           <p class="title">Geomatics Engineer/ GeoAI Enthusiast</p>
         </div>
 
-        <a class="download-button" href="assets/images/CV1.pdf" download>Download CV</a>
+        <a class="download-button" href="assets/images/Supath Dhital CV.pdf" download>Download CV</a>
 
         <button class="info_more-btn" data-sidebar-btn>
           <span>Show Contacts</span>
