updating the latest works into portfolio

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
         </div>
 
-        <button class="download-button" id="viewCVBtn">View CV</button>
+        <button class="download-button" id="viewCVBtn">View Resume</button>
 
         <button class="info_more-btn" data-sidebar-btn>
           <span>Show Contacts</span>
@@ -207,18 +207,15 @@
 
         <section class="about-text">
           <p>
-            It's me Supath Dhital, with undergrad of Geomatics Engineering at IOE Western Region Campus, Pokhara. I have
-            been doing spatial data analysis and doing so much image analysis work. I am very enthusiastic about
-            exploring new information related to geoinformatics and earth science.
-          </p>
-
-          <p>
-            I have strong knowledge in Geospatial Data and have done many geospatial analysis, currently primary focus
-            on the Geospatial AI. If we are able to automate the whole analytical part it will be very easy for future
-            works and saves time too.
+            I'm Supath Dhital, a graduate student in Deaprtment of Geography and the Environment at the University of Alabama, specializing in 
+            geospatial and water resources modeling with a concentration in surrogate flood inundation mapping. 
+            Currently, I work as a graduate researcher at the Surface Dynamics Modeling Lab, where I develop automated, 
+            Python-based geospatial frameworks that support operational research in surface water hydrology. With a strong 
+            foundation in GIS, remote sensing, and ESRI technologies, I focus on integrating spatial science, hydrology, and 
+            AI to build scalable tools for flood forecasting, inundation modeling, and decision-support systems. I'm passionate 
+            about solving real-world water challenges through automation, innovation, and interdisciplinary collaboration.
           </p>
         </section>
-
 
         <!--
           - service
@@ -226,7 +223,7 @@
 
         <section class="service">
 
-          <h3 class="h3 service-title">What i'm doing</h3>
+          <h3 class="h3 service-title">My area of knowledge</h3>
 
           <ul class="service-list">
 
@@ -238,15 +235,75 @@
               </div>
 
               <div class="service-content-box">
-                <h4 class="h4 service-item-title">Geospatial Data Science</h4>
+                <h4 class="h4 service-item-title">Geospatial Data Science and Analytics</h4>
 
                 <p class="service-item-text">
-                  Applying the Machine Learning to the Geo Data.
+                  Developed and streamlined several spatial workflows using Python,
+                  ArcPy, GDAL, and rasterio. Built scalable geospatial data processing pipelines with AWS S3 and automated 
+                  workflows for advanced spatial analysis techniques.
                 </p>
               </div>
 
             </li>
 
+            <li class="service-item">
+
+              <div class="service-icon-box">
+                <img src="./assets/images/ai_water.jpg"
+                " alt="design icon" width="40">
+              </div>
+
+              <div class="service-content-box">
+                <h4 class="h4 service-item-title">Machine Learning and AI for Water Resources</h4>
+
+                <p class="service-item-text">
+                Developed deep learning-based surrogate models achieving 30%+ better accuracy and 1000X faster flood mapping processing speeds. 
+                Led deep learning project for flood forecasting using 20+ years of Danube and Sava River data, 
+                and implemented LSTM models for short-term weather forecasting in Nepal.
+                </p>
+              </div>
+
+            </li>
+
+            <li class="service-item">
+
+              <div class="service-icon-box">
+                <img src="./assets/images/cloud_computing.png
+                " alt="design icon" width="40">
+              </div>
+
+              <div class="service-content-box">
+                <h4 class="h4 service-item-title">WebGIS Development and Cloud Computing</h4>
+
+                <p class="service-item-text">
+                Developed WebGIS platforms using ArcGIS Online, Experience Builder, and Arcade for flood 
+                inundation visualization. Built Python-based operational workflows integrating Google Earth
+                Engine API, AWS cloud storage, and deployed machine learning models through Flask web applications.
+                </p>
+              </div>
+
+            </li>
+
+            <li class="service-item">
+
+              <div class="service-icon-box">
+                <img src="./assets/images/database.png
+                " alt="design icon" width="40">
+              </div>
+
+              <div class="service-content-box">
+                <h4 class="h4 service-item-title">Database design and Automation</h4>
+
+                <p class="service-item-text">
+                Designed and implemented PostgreSQL/PostGIS geodatabase schemas for complex spatial analysis 
+                and network routing applications. Developed automated geospatial workflows using ArcPy, ModelBuilder, 
+                and Python scripting to streamline repetitive data processing tasks across large-scale projects. 
+                Created standardized data validation frameworks and quality control procedures multiple geospatial initiatives. Built end-to-end automation pipelines integrating 
+                cloud storage, APIs, and spatial databases for scalable geospatial data management and analysis.
+                </p>
+              </div>
+
+            </li>
 
             <li class="service-item">
 
@@ -259,13 +316,15 @@
                 <h4 class="h4 service-item-title">Cartography</h4>
 
                 <p class="service-item-text">
-                  The most modern and high-quality maps made at a professional level.
+                Created thematic and web maps using UMap, Mapbox, and Overpass Turbo for spatial 
+                information dissemination across disaster-mapping projects. 
+                Designed interactive geospatial data visualization frameworks leveraging Folium, Leaflet, and geemap, 
+                with experience in cartographic design principles from formal coursework and practical application in 
+                flood inundation extent mapping.
                 </p>
               </div>
 
             </li>
-
-
 
             <li class="service-item">
 
@@ -274,10 +333,12 @@
               </div>
 
               <div class="service-content-box">
-                <h4 class="h4 service-item-title">Remote Sensing and Photogrammetry</h4>
+                <h4 class="h4 service-item-title">Field Surveying and Remote Sensing</h4>
 
                 <p class="service-item-text">
-                  I have done Drone Surveys, so many analysis of satellite imagery and so many focusing to the geo data.
+                Executed topographic, hydropower, and bridge site surveys using DGPS and field instruments. 
+                Led UAV-based mapping projects with Pix4DMapper, processed LiDAR data in Global Mapper, and 
+                conducted field data collection via GPS, Survey123, and Field Maps for ground-truth validation.
                 </p>
               </div>
 
@@ -292,7 +353,7 @@
                 <h4 class="h4 service-item-title">Surveying</h4>
 
                 <p class="service-item-text">
-                  I have been doing different kinds of surveying related to road, bridge, land and so many so strong
+                  Experience on different kinds of surveying related to road, bridge, land and so many so strong
                   knowledge on surveying and data handling.
                 </p>
               </div>
@@ -435,9 +496,15 @@
 
         <section class="clients">
 
-          <h3 class="h3 clients-title">Working Places</h3>
+          <h3 class="h3 clients-title">Worked Places</h3>
 
           <ul class="clients-list has-scrollbar">
+
+            <li class="clients-item">
+              <a href="#">
+                <img src="./assets/images/sdml.png" alt="SDML logo" style="width: 70%; height: auto;">
+              </a>
+            </li>
 
             <li class="clients-item">
               <a href="#">
@@ -1055,39 +1122,38 @@
 
         <section class="contact-form">
           <h3 class="h3 form-title">Contact Form</h3>
-          <form method="post" class="form" data-form>
+          <form class="form" data-form onsubmit="sendEmail(event)">
             <div class="input-wrapper">
-              <input type="text" id="fullname" name="fullname" class="form-input" placeholder="Full name" required
-                data-form-input>
-              <input type="email" id="email" name="email" class="form-input" placeholder="Email address" required
-                data-form-input>
+              <input type="text" id="fullname" name="fullname" class="form-input" placeholder="Full name" required data-form-input>
+              <input type="email" id="email" name="email" class="form-input" placeholder="Email address" required data-form-input>
             </div>
-            <textarea name="message" id="message" class="form-input" placeholder="Your Message" required
-              data-form-input></textarea>
-            <button class="form-btn" onclick="sendEmail(event)" type="submit" data-form-btn disabled>
+            <textarea name="message" id="message" class="form-input" placeholder="Your Message" required data-form-input></textarea>
+            <button class="form-btn" type="submit" data-form-btn disabled>
               <ion-icon name="paper-plane"></ion-icon>
               <span>Send Message</span>
             </button>
           </form>
         </section>
 
-
       </article>
-
     </div>
-
   </main>
-
-
-
-
-
 
   <!--
     - custom js link
   -->
   <script src="./assets/js/script.js"></script>
   <script src="./assets/js/contact.js"></script>
+
+    <!-- EmailJS Script -->
+  <script type="text/javascript" src="https://cdn.emailjs.com/dist/email.min.js"></script>
+  <script>
+    // Initialize EmailJS
+    (function() {
+      emailjs.init("IOdWPlCUy3gReRWle"); // Replace with your actual public key from EmailJS
+    })();
+  </script>
+
   <!--
     - ionicon link
   -->
