update the projects

--- a/index.html
+++ b/index.html
@@ -567,7 +567,7 @@
               <h4 class="h4 timeline-item-title">The University of Alabama, Tuscaloosa, AL 35401, USA
               </h4>
 
-              <span> 2024 Spring-  </span>
+              <span> 2024 Spring - 2025 Fall </span>
 
               <p class="timeline-text">
                 Currently I am doing my MS in Geography in the Department of Geography and Environmental Studies, UA. I got a full funding 
@@ -624,6 +624,86 @@
 
             <li class="timeline-item">
 
+              <h4 class="h4 timeline-item-title">FIMserv: A Tool for Streamlining Flood Inundation Mapping (FIM) Using the United States Operational Hydrological Forecasting Framework</h4>
+
+              <span>Aug 2024 - Mar 2025 </span>
+
+              <p class="timeline-text">
+                Delivered a fully functional, open-source toolset—FIMserv—that automates and accelerates NOAA-OWP’s 
+                HAND-based flood mapping workflow, supporting multi-watershed simulations, cross-model discharge evaluation, and flexible deployment 
+                on local or cloud platforms for operational and research use. <a class="link"
+                  href="https://github.com/sdmlua/FIMserv">GitHub Link</a>
+              </p>
+
+            </li>
+
+            <li class="timeline-item">
+
+              <h4 class="h4 timeline-item-title">Flood Inundation Mapping Predictions Evaluation Framework (FIMeval)</h4>
+
+              <span>Oct 2024 - Mar 2025 </span>
+
+              <p class="timeline-text">
+                Developed FIMeval, a Python-based framework for automated evaluation of flood inundation maps, minimizing manual 
+                preprocessing and errors. The tool supports multi-source comparison, permanent waterbody masking, and building-level 
+                inundation analysis.<a class="link"
+                href="https://github.com/sdmlua/fimeval">GitHub Link</a>
+              </p>
+
+            </li>
+
+            <li class="timeline-item">
+
+              <h4 class="h4 timeline-item-title">
+                Implemented a database with PostgreSQL and a framework for dynamic evacuation route planning for flood risk.</h4>
+              <span>Aug 2024 - Dec 2024 </span>
+
+              <p class="timeline-text">
+                I designed and implemented a dynamic flood evacuation route planning system using PostGIS and pgRouting, 
+                tailored to real-time flood scenarios (normal, median, and peak flows). Collected, preprocessed, and integrated 
+                diverse spatial datasets—DEM, LULC, TWI, precipitation, population density, road and building footprints—for suitability 
+                analysis and flood impact assessment. Developed spatial SQL functions to automate inundation mapping, shortest path 
+                calculations, and evacuation routing based on real-time data. Built a normalized spatial database schema to support 
+                complex spatial relationships and optimized routing logic. This solo project showcases advanced proficiency in GIS, 
+                spatial database management, geospatial analytics, disaster risk planning, and climate resilience modeling. <a class="link"
+                  href="https://bama365-my.sharepoint.com/:b:/g/personal/sdhital_crimson_ua_edu/Ed5NAdWX1X5Gv9OrGmISDJsBYq7RA172L_FrIuyL7v-75g?e=VVXRrH">Access final report</a>
+              </p>
+
+            </li>
+
+            <li class="timeline-item">
+
+              <h4 class="h4 timeline-item-title">Designed and deployed a WebGIS application with ArcGIS Online and Arcade for flood inundation extent dissemination.</h4>
+
+              <span>Jan 2024 - Apr 2024 </span>
+
+              <p class="timeline-text">
+                This study showcases the power of ArcGIS Online and WebGIS visualization—using interactive story maps and field maps—to
+                 effectively communicate flood risks and inundation patterns across return periods, bridging technical analysis with 
+                 user-friendly decision-making tools.<a class="link"
+                href="https://experience.arcgis.com/experience/5baf105df7f3477e84f3c78f18a6a394">Access Web Application</a>
+              </p>
+
+            </li>
+
+            <li class="timeline-item">
+
+              <h4 class="h4 timeline-item-title">Detailed comparison between terrain-based flood maps with HEC RAS outputs for the Neuse River, NC.</h4>
+              <span>Jan 2024 - Apr 2024 </span>
+
+              <p class="timeline-text">
+              I conducted an in-depth comparative analysis of flood inundation predictions using the OWP HAND-FIM which is the operational
+              flood Inundation mapping (FIM) adobted by the National Water Center- Office of Water Prediction (NWC-OWP) and HEC-RAS 2D models
+               for various return periods (2, 10, 25, and 50 years) in a North Carolina case study. This project involved geospatial data 
+               processing, map generation, and model performance evaluation using HEC-RAS, ArcGIS Pro, and data from the National Water Model. 
+               <a class="link"
+                  href="https://bama365-my.sharepoint.com/:b:/g/personal/sdhital_crimson_ua_edu/EUKv2V733XNGlrVdWhMl3xsB0hbBGB0SMlXLy3J7GRlKZA?e=2cyOqW">Access final report</a>
+              </p>
+
+            </li>
+
+            <li class="timeline-item">
+
               <h4 class="h4 timeline-item-title">Preparing Orthophoto usinf UAV Imagery: Case study of Pashchimanchal
                 Campus</h4>
 
@@ -666,17 +746,33 @@
           </div>
 
           <ol class="timeline-list">
+
+            <li class="timeline-item">
+
+              <h4 class="h4 timeline-item-title">Water Predicition Innoveters Summer Institute</h4>
+
+              <span>June 2025 - Present </span>
+
+              <p class="timeline-text">
+                Investigating the possibility of pluvial flooding response through Next Generation Water Modeling Framework.
+              </p>
+
+            </li>
+
             
             <li class="timeline-item">
 
               <h4 class="h4 timeline-item-title">Graduate Research Assistant (GRA)</h4>
 
-              <span>Jan 2024- </span>
+              <span>Jan 2024 - Present </span>
 
               <p class="timeline-text">
                 
-                1. Trying to reduce computational cost by adapting ML model
-                2. Working to improve forecasting using a surrogate modeling approach by using non precise HAND FIM data and more accurate HECRAS Data.
+              1. Enhanced the predictability of low-fidelity flood map extent accuracy by 30% + and 1000X faster through surrogate modeling.<br>
+              2. Implemented robust, scalable pipelines leveraging AWS S3 for operational geospatial data processing.<br>
+              3. Built a Python-based operational workflow for flood mapping through raster analysis with GDAL, rasterio, and the GEE API.<br>
+              4. Collaborated on building a global river slope fabric for 213k+ reaches using Python, Model Builder, and automated ArcPy workflows.<br>
+              5. Facilitated 3 training workshops on flood mapping and evaluation algorithms for 100+ water resources professionals.<br>
 
               </p>
 
