update the skills

--- a/index.html
+++ b/index.html
@@ -844,88 +844,123 @@
         </section>
 
         <section class="skill">
-          <h3 class="h3 skills-title">My skills</h3>
+          <h3 class="h3 skills-title">My Skills</h3>
 
           <div class="skills-container">
             <div class="column">
               <ul class="skills-list content-card">
+
                 <li class="skills-item">
                   <div class="title-wrapper">
-                    <h5 class="h5">Drone Survey</h5>
-                    <data value="80">80%</data>
+                    <h5 class="h5">Python & Geospatial Libraries</h5>
+                    <data value="90" style="color: white;">95%</data>
                   </div>
                   <div class="skill-progress-bg">
-                    <div class="skill-progress-fill" style="width: 80%;"></div>
+                    <div class="skill-progress-fill" style="width: 90%; background-color: #4CAF50;"></div>
                   </div>
                 </li>
 
                 <li class="skills-item">
                   <div class="title-wrapper">
-                    <h5 class="h5">Satellite Analytical Tools (ArcGIS, QGIS, ENVI, esaSNAP)</h5>
-                    <data value="80">60%</data>
+                    <h5 class="h5">ArcGIS & QGIS Suite</h5>
+                    <data value="90" style="color: white;">95%</data>
                   </div>
                   <div class="skill-progress-bg">
-                    <div class="skill-progress-fill" style="width: 80%;"></div>
+                    <div class="skill-progress-fill" style="width: 90%; background-color: #2196F3;"></div>
                   </div>
                 </li>
+
                 <li class="skills-item">
                   <div class="title-wrapper">
-                    <h5 class="h5">AI (GeoAI, Spatial Data Science, Computer Vision)</h5>
-                    <data value="60">60%</data>
+                    <h5 class="h5">GeoAI & ML (PyTorch, sklearn)</h5>
+                    <data value="75" style="color: white;">90%</data>
                   </div>
                   <div class="skill-progress-bg">
-                    <div class="skill-progress-fill" style="width: 60%;"></div>
+                    <div class="skill-progress-fill" style="width: 75%; background-color: #9C27B0;"></div>
                   </div>
                 </li>
+
                 <li class="skills-item">
                   <div class="title-wrapper">
-                    <h5 class="h5">Surveying and Cartography</h5>
-                    <data value="90">90%</data>
+                    <h5 class="h5">Drone Survey & UAV Mapping</h5>
+                    <data value="80" style="color: white;">85%</data>
                   </div>
                   <div class="skill-progress-bg">
-                    <div class="skill-progress-fill" style="width: 90%;"></div>
+                    <div class="skill-progress-fill" style="width: 80%; background-color: #FF9800;"></div>
+                  </div>
+                </li>
+
+                <li class="skills-item">
+                  <div class="title-wrapper">
+                    <h5 class="h5">Surveying & Cartography</h5>
+                    <data value="90" style="color: white;">90%</data>
+                  </div>
+                  <div class="skill-progress-bg">
+                    <div class="skill-progress-fill" style="width: 90%; background-color: #795548;"></div>
                   </div>
                 </li>
 
               </ul>
             </div>
+
             <div class="column">
               <ul class="skills-list content-card">
+
                 <li class="skills-item">
                   <div class="title-wrapper">
-                    <h5 class="h5">DGPS and LiDAR</h5>
-                    <data value="60">60%</data>
+                    <h5 class="h5">PostgreSQL & PostGIS</h5>
+                    <data value="85" style="color: white;">85%</data>
                   </div>
                   <div class="skill-progress-bg">
-                    <div class="skill-progress-fill" style="width: 60%;"></div>
+                    <div class="skill-progress-fill" style="width: 85%; background-color: #3F51B5;"></div>
                   </div>
                 </li>
+
                 <li class="skills-item">
                   <div class="title-wrapper">
-                    <h5 class="h5">PostgreSQL (PostGIS)</h5>
-                    <data value="50">50%</data>
+                    <h5 class="h5">Data Visualization</h5>
+                    <data value="80" style="color: white;">95%</data>
                   </div>
                   <div class="skill-progress-bg">
-                    <div class="skill-progress-fill" style="width: 50%;"></div>
+                    <div class="skill-progress-fill" style="width: 80%; background-color: #009688;"></div>
                   </div>
                 </li>
+
                 <li class="skills-item">
                   <div class="title-wrapper">
-                    <h5 class="h5">Data Visualization Tools (xarray, Matplotlib, plotly, seaborn)</h5>
-                    <data value="70">70%</data>
+                    <h5 class="h5">Cloud Platforms (AWS, GEE, HPC)</h5>
+                    <data value="75" style="color: white;">85%</data>
                   </div>
                   <div class="skill-progress-bg">
-                    <div class="skill-progress-fill" style="width: 70%;"></div>
+                    <div class="skill-progress-fill" style="width: 75%; background-color: #F44336;"></div>
                   </div>
                 </li>
+
+                <li class="skills-item">
+                  <div class="title-wrapper">
+                    <h5 class="h5">DGPS & LiDAR Processing</h5>
+                    <data value="70" style="color: white;">80%</data>
+                  </div>
+                  <div class="skill-progress-bg">
+                    <div class="skill-progress-fill" style="width: 70%; background-color: #607D8B;"></div>
+                  </div>
+                </li>
+
+                <li class="skills-item">
+                  <div class="title-wrapper">
+                    <h5 class="h5">Web Mapping (Leaflet, ArcGIS)</h5>
+                    <data value="70" style="color: white;">95%</data>
+                  </div>
+                  <div class="skill-progress-bg">
+                    <div class="skill-progress-fill" style="width: 70%; background-color: #00BCD4;"></div>
+                  </div>
+                </li>
+
               </ul>
             </div>
           </div>
         </section>
-
       </article>
-
-
 
       <!--
         - #PORTFOLIO
