added publications and posters

--- a/index.html
+++ b/index.html
@@ -843,6 +843,94 @@
 
         </section>
 
+        <section class="publications">
+          <h3 class="h3 skills-title">Publications</h3>
+
+          <ul class="skills-list content-card">
+
+            <li class="skills-item">
+              <div class="title-wrapper">
+                <h5 class="h5">
+                  Dhital, S., Lamsal, K., Shrestha, S., & Bhurtyal, U. (2024). Forecasting Weather using deep learning from the Meteorological stations Data: a study of different Meteorological stations in Kaski District, Nepal. 
+                  <i>EURASIAN JOURNAL OF SCIENCE AND ENGINEERING</i>, 10(2), 16–33.
+                </h5>
+              </div>
+            </li>
+
+            <li class="skills-item">
+              <div class="title-wrapper">
+                <h5 class="h5">
+                  Dhital, S. (2024). Methods to improve run time of hydrologic models: opportunities and challenges in the machine learning era. 
+                  <i>arXiv preprint arXiv:2408.02242</i>.
+                </h5>
+              </div>
+            </li>
+
+            <li class="skills-item">
+              <div class="title-wrapper">
+                <h5 class="h5">
+                  Dhital, S. SYSTEMATIC AND RESEARCHED PROMOTION OF ROOFTOP FARMING: A SUSTAINABLE REMEDIAL ACTIVITY FOR BURNING ENVIRONMENTAL ISSUES IN KATHMANDU, NEPAL.
+                </h5>
+              </div>
+            </li>
+
+            <li class="skills-item">
+              <div class="title-wrapper">
+                <h5 class="h5">
+                  Dhital, S. (2022). UAV technology, its application, principle and workflow to disaster monitoring and emergency response.
+                </h5>
+              </div>
+            </li>
+
+            <li class="skills-item">
+              <div class="title-wrapper">
+                <h5 class="h5">
+                  Dhital, S., Burauh, A., Nikrou, P., & Cohen, S. (2025). Enhancement of the NOAA Flood Inundation Mapping Framework (OWP HAND-FIM) through Surrogate Modeling. 
+                  <i>Authorea Preprints</i>.
+                </h5>
+              </div>
+            </li>
+
+            <li class="skills-item">
+              <div class="title-wrapper">
+                <h5 class="h5">
+                  Dhital, S., & Lamsal, K. Orthophoto Generation Using UAV: A Case Study of Pashchimanchal Campus, Pokhara.
+                </h5>
+              </div>
+            </li>
+
+          </ul>
+        </section>
+
+
+        <section class="presentations">
+          <h3 class="h3 skills-title">Conferences & Presentations</h3>
+
+          <ul class="skills-list content-card">
+
+            <li class="skills-item">
+              <div class="title-wrapper">
+                <h5 class="h5">
+                  Surrogate model-guided enhancement of operational flood mapping techniques – CIROH DevCon, Vermont, 2025
+                  <br>
+                </h5>
+              </div>
+            </li>
+
+            <li class="skills-item">
+              <div class="title-wrapper">
+                <h5 class="h5">
+                  NOAA FIM enhancement via surrogate modeling approach – AGU Fall Meeting, Washington D.C., 2024
+                  <br>
+                </h5>
+              </div>
+            </li>
+
+          </ul>
+        </section>
+
+
+
         <section class="skill">
           <h3 class="h3 skills-title">My Skills</h3>
 
